Fix Image Align
컨텐츠 내 이미지 왼쪽 정렬에서 가운데 정렬로 수정

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -28,7 +28,11 @@ img {
   max-width: 100%;
   height: auto;
   width: auto;
-  vertical-align: middle;
+  //vertical-align: middle;
+  display: block;
+  margin: auto;
+  margin-top: 1.3rem;
+  margin-bottom: 1.3rem;
 }
 
 img::selection {
